@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2008, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,8 +26,8 @@
  * @bug 6716441
  * @summary error in meet with +DoEscapeAnalysis
  *
- * @run main/othervm -Xcomp -XX:+AggressiveOpts
- *      compiler.escapeAnalysis.cr6716441.Tester
+ * @run main/othervm -XX:+IgnoreUnrecognizedVMOptions -Xcomp -XX:+EliminateAutoBox -XX:AutoBoxCacheMax=20000
+ *                   compiler.escapeAnalysis.cr6716441.Tester
  */
 
 /* Complexity upper bound: 70070 ops */
